--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 BLUESKY_USERNAME="username.bsky.social"
 BLUESKY_PASSWORD="abcd-1234-efgh-5678"
+MASTODON_TOKEN="your_token_goes_here"
+MASTODON_BASE_URL="https://your.mastodon.instance/"
+GRAMMARS_DIRECTORY="grammars/"
